--- a/Booking.RapidAPI/Booking.RapidAPI.csproj
+++ b/Booking.RapidAPI/Booking.RapidAPI.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\vacation-rental-master\**" />
+    <Content Remove="wwwroot\vacation-rental-master\**" />
+    <EmbeddedResource Remove="wwwroot\vacation-rental-master\**" />
+    <None Remove="wwwroot\vacation-rental-master\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
   </ItemGroup>
 
